--- a/app/views/mails/mail_not_found.html.erb
+++ b/app/views/mails/mail_not_found.html.erb
@@ -1,4 +1,2 @@
-<div class="notice error">
-	<div class="content">该邮件已经被删除<div>
-	<a href="native://exitView">确定</a>
-</div>
+<%@notice="该邮件已被删除。"%>
+<%= render :template=>"common/info"%>
