--- a/app/views/register/index.html.erb
+++ b/app/views/register/index.html.erb
@@ -1,12 +1,12 @@
 
 <div class="wrap" style="text-align:center">
 	<%if @error then%>
-	<div class="notice error"><div class="content"><%=@error%></div></div>
+	<%=render :template=>"common/error"%>	
 	<%end%>
-	<p style="margin-bottom:2em">请输入您邮箱<span><%=@email%></span>的密码</p>
+	<p style="color:#3691df;font-size:1.5em;margin-bottom:1em">请绑定您的邮箱</p>
 	<form method="post" action="<%=url_for(:controller=>:register,:action=>:create)%>">
 		<input type="hidden" name="email" value="<%=@email%>">
-		<input type="password" style="width:80%;font-size:1em;border:none;-webkit-appearance: none;line-height:1.5em;font-size:1.5em"  name="password" placeholder="邮箱密码" >
+		<input type="password" style="width:80%;font-size:1em;border:none;-webkit-appearance: none;line-height:1.5em;font-size:1.5em"  name="password" placeholder="密码" >
 		<div class="actions ">
 			<input  class="btn-large" style="margin-left:0" type="submit" value="绑定"/>
 		</div>
