--- a/app/views/mails/new.html.erb
+++ b/app/views/mails/new.html.erb
@@ -1,3 +1,4 @@
+     <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <%if @error then%>
   <%=render :template=>"common/error"%> 
   <%end%>
