Added select button to users input.

--- a/app/assets/stylesheets/mails.css.less
+++ b/app/assets/stylesheets/mails.css.less
@@ -47,7 +47,8 @@ a{text-decoration:none;}
 .infobar{ padding: 5px 10px; border-bottom-color:#fafafa; font-size:.9em; background-color:#f1f1f1; background: -webkit-gradient(linear, 0 0, 0 100%, from(#f1f1f1), to(#fafafa));}
 .to_info input, .to_info textarea, .content input, .content textarea{ border: none; -webkit-appearance: none;}
 .to_info{font-size:1em;line-height:150%;position:relative; margin:0; padding:0; }
-.to_info input{font-size: 1em; width: 97%; }
+.to_info input{font-size: 1em; width: 80%; }
+.to_info img{height: 1.5em;width: 1.5em;}
 .to_info_inner > div{ border-bottom:1px solid #e7e9eb; padding: 5px 10px; }
 .toname{ font-weight: bold; line-height: 1.5em; color: #1e5494; }
 .toname input{}
@@ -55,7 +56,7 @@ a{text-decoration:none;}
 .to_info_inner{ overflow: hidden; text-overflow:ellipsis;}
 .to_info_inner>div:last-child{margin-bottom: 0; }
 .to_info_unfold{padding:0;}
-.to_info_unfold input{ width: 97%;}
+.to_info_unfold input{ width: 80%;}
 .to_info .mui_ico_darrow{position:absolute;top:5px;left:0px;}
 .suggest{background: #fff; z-index: 999;}
 .content{padding: 5px 10px;}
