--- a/app/views/mails/new.html.erb
+++ b/app/views/mails/new.html.erb
@@ -14,7 +14,7 @@
                <span class="namelist_label g" >收件人：</span>
                <span class="namelist toname">
                   <input type="text" name="to" id="to" value='<%=@to%>' />
-                  <div id="shoto_d" class="suggest" style="display:none;"></div>
+                  <a href="native://selectUsers?to"><%= image_tag "icon-select.png" %></a>
                </span>
             </div>
          </div>
@@ -30,15 +30,13 @@
                <div class="to_box" >
                   <span class="namelist_label g" onclick="S('showcc').focus();">抄　送：</span>
                   <span class="namelist toname">
-                     <input type="text" name="cc" id="cc" value="<%=@cc%>" />
-                     <div id="showcc_d" class="suggest" style="display:none;"></div>
+                     <input type="text" name="cc" id="cc" value="<%=@cc%>" /> <a href="native://selectUsers?cc"><%= image_tag "icon-select.png" %></a>
                   </span>
                </div>
                <div class="to_box" >
                   <span class="namelist_label g" onclick="S('showbcc').focus();">密　送：</span>
                   <span class="namelist toname">
-                    <input type="text" name="bcc" id="bcc" value="<%=@bcc%>" />
-                     <div id="showbcc_d" class="suggest" style="display:none;"></div>
+                    <input type="text" name="bcc" id="bcc" value="<%=@bcc%>" /> <a href="native://selectUsers?bcc"><%= image_tag "icon-select.png" %></a>
                   </span>
                </div>
             </div>
@@ -55,7 +53,7 @@
          <div class="infobar g"><%=  @type=="3" ? "转发":"回复" %>成功后将自动附带原邮件内容</div>
          <%end%>
          <!--<div ><label for="content" >正文：</label></div>--><!--<div style="margin-top:5px;">-->
-         <div class="mailComposeInputWrap"><textarea tabindex="4" rows="10" onkeypress="dokey(event,this)" name="content" id="content" class="mailComposeInput" style="font-size:15px;"> <%=@content%></textarea></div>
+         <div class="mailComposeInputWrap"><textarea tabindex="4" rows="10" name="content" id="content" class="mailComposeInput" style="font-size:15px;"> <%=@content%></textarea></div>
       </div>
    </div>
    <div class="actions cols2">
@@ -68,7 +66,23 @@
    </div>
 </form>
 <script>
+Bridge = {
+    trigger:function(key,items){
+        $("body").trigger(key,{items:items});
+    },
+    on:function(key,callback){
+        $("body").off(key).on(key,function(event,result){
+            callback(result.items)
+        });
+    },
+    sendReturnValue:function(methodName,value){
+      if("undefined" != typeof window.bridgeCallback){
+        window.bridgeCallback.sendReturnValue(methodName,value);
+      }
+      return value;
+    }
 
+};
 function S(e_id){
   return document.getElementById(e_id+"_d") ;
 }
@@ -78,14 +92,27 @@ function sw(f)
 document.getElementById("moreDiv").style.display = f?"":"none";
 document.getElementById("simpleDiv").style.display = f?"none":"";
 }
-function dokey(e,d)
-{
- if ((parseInt(d.style.posHeight) + 5) < d.scrollHeight )
- {
-   d.style.posHeight=d.scrollHeight;
- }
-}
+
 <% if @bcc then%>
 sw(1)
 <%end%>
+Bridge={
+  trigger:function(key,items,ext){
+   var emails=[];
+      for (var i = 0; i < items.length; i++) {
+          var email = items[i].email;
+          if(email&&email.length>0){
+            emails.push(email);
+          }
+      }
+    document.getElementById(ext).value += emails.join(";")
+  }
+}
+
+var textarea = document.getElementById("content");
+
+textarea.oninput = function() {
+  textarea.style.height = ""; /* Reset the height*/
+  textarea.style.height =textarea.scrollHeight+ "px";
+};
 </script>
